<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/lightBlue">

    <Button
        android:text="@string/toRomList"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="103dp"
        android:id="@+id/roomListBtn"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <Button
        android:text="@string/toCheckInOut"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="55dp"
        android:id="@+id/toCheckInOut"
        android:layout_below="@+id/roomListBtn"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:text="@string/adminView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="42dp"
        android:id="@+id/toAdmin"
        android:layout_below="@+id/toCheckInOut"
        android:layout_centerHorizontal="true"
        android:visibility="gone" />

    <Button
        android:text="Log Out"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:id="@+id/logOutBtn" />
</RelativeLayout>